--- a/visual.html
+++ b/visual.html
@@ -23,17 +23,23 @@ var width = 960,
     innerRadius = 40,
     outerRadius = 240;
 
-var angle = d3.scale.ordinal().domain(d3.range(4)).rangePoints([0, 2 * Math.PI]),
+var angle = d3.scale.ordinal().domain(d3.range(14)).rangePoints([0, 2 * Math.PI]),
     radius = d3.scale.linear().range([innerRadius, outerRadius]),
     color = d3.scale.category10().domain(d3.range(20));
 
 var nodes = [
   {x: 0, y: .1},
-  {x: 0, y: .9},
-  {x: 1, y: .2},
+  {x: 1, y: .9},
+  {x: 2, y: .2},
+  {x: 6, y: .3},
+  {x: 4, y: .1},
+  {x: 7, y: .8},
   {x: 1, y: .3},
-  {x: 2, y: .1},
-  {x: 2, y: .8}
+  {x: 9, y: .2},
+  {x: 8, y: .5},
+  {x: 8, y: .1},
+  {x: 4, y: .5},
+  {x: 5, y: .2}
 ];
 
 var links = [
@@ -42,10 +48,15 @@ var links = [
   // {source: {x: 2, y: .1}, target: {x: 0, y: .1}},
   {source: nodes[1], target: nodes[3]},
   {source: nodes[2], target: nodes[4]},
-  {source: nodes[2], target: nodes[5]},
   {source: nodes[3], target: nodes[5]},
-  {source: nodes[4], target: nodes[0]},
-  {source: nodes[5], target: nodes[1]}
+  {source: nodes[4], target: nodes[5]},
+  {source: nodes[5], target: nodes[0]},
+  {source: nodes[6], target: nodes[1]},
+  {source: nodes[7], target: nodes[1]},
+  {source: nodes[8], target: nodes[1]},
+  {source: nodes[9], target: nodes[1]},
+  {source: nodes[10], target: nodes[1]},
+  {source: nodes[2], target: nodes[1]}
 ];
 
 var svg = d3.select("body").append("svg")
@@ -57,6 +68,9 @@ var svg = d3.select("body").append("svg")
 var axisscale = d3.scale.linear()
     .domain([0,13])
     .range([0,360]);
+var anglescale = d3.scale.linear()
+    .domain([0,13])
+    .range([0,2*Math.PI]);
 svg.selectAll(".axis")
     .data(d3.range(13))
   .enter().append("line")
@@ -70,8 +84,8 @@ svg.selectAll(".link")
   .enter().append("path")
     .attr("class", "link")
     .attr("d", d3.hive.link()
-    .angle(function(d) { console.log(angle(d.x)); return angle(d.x); })   // angle(d.x)
-    .radius(function(d) { return radius(d.y); }))
+    .angle(function(d) { console.log("Hey there", d.x, "and then...", anglescale(d.x)); return (angle(d.x)); })   // angle(d.x)
+   .radius(function(d) { return radius(d.y); }))
     .style("stroke", function(d) { return color(d.source.x); })
 
 svg.selectAll(".node")
