breaking things. bringing in csv file

--- a/visual.html
+++ b/visual.html
@@ -24,40 +24,59 @@ var width = 960,
     outerRadius = 240;
 
 var angle = d3.scale.ordinal().domain(d3.range(14)).rangePoints([0, 2 * Math.PI]),
-    radius = d3.scale.linear().range([innerRadius, outerRadius]),
+    radius = d3.scale.linear().domain([0,14]).range([innerRadius, outerRadius]),
     color = d3.scale.category10().domain(d3.range(20));
 
-var nodes = [
-  {x: 0, y: .1},
-  {x: 1, y: .9},
-  {x: 2, y: .2},
-  {x: 6, y: .3},
-  {x: 4, y: .1},
-  {x: 7, y: .8},
-  {x: 1, y: .3},
-  {x: 9, y: .2},
-  {x: 8, y: .5},
-  {x: 8, y: .1},
-  {x: 4, y: .5},
-  {x: 5, y: .2}
-];
+ var stations_axes=[
+ {"1":"151"},
+ {"2":"285"},
+ {"3":"293"},
+ {4:327},
+ {5:358},
+ {6:382},
+ {7:402},
+ {8:426},
+ {9:435},
+ {497:10},
+ {499:11},
+ {519:12},
+ {521:13}]
+ ;
+function map_stations_axes(station){
+  console.log(stations_axes[station]);
+  return stations_axes[station];}
 
-var links = [
-  {source: nodes[0], target: nodes[2]},
-  // {source: nodes[0], target: {x: 3, y: .3}},
-  // {source: {x: 2, y: .1}, target: {x: 0, y: .1}},
-  {source: nodes[1], target: nodes[3]},
-  {source: nodes[2], target: nodes[4]},
-  {source: nodes[3], target: nodes[5]},
-  {source: nodes[4], target: nodes[5]},
-  {source: nodes[5], target: nodes[0]},
-  {source: nodes[6], target: nodes[1]},
-  {source: nodes[7], target: nodes[1]},
-  {source: nodes[8], target: nodes[1]},
-  {source: nodes[9], target: nodes[1]},
-  {source: nodes[10], target: nodes[1]},
-  {source: nodes[2], target: nodes[1]}
-];
+var nodes;
+//   {x: 0, y: .1},
+//   {x: 1, y: .9},
+//   {x: 2, y: .2},
+//   {x: 6, y: .3},
+//   {x: 4, y: .1},
+//   {x: 7, y: .8},
+//   {x: 1, y: .3},
+//   {x: 9, y: .2},
+//   {x: 8, y: .5},
+//   {x: 8, y: .1},
+//   {x: 4, y: .5},
+//   {x: 5, y: .2}
+// ];
+
+// var links = [
+//   {source: nodes[0], target: nodes[2]},
+//   // {source: nodes[0], target: {x: 3, y: .3}},
+//   // {source: {x: 2, y: .1}, target: {x: 0, y: .1}},
+//   {source: nodes[1], target: nodes[3]},
+//   {source: nodes[2], target: nodes[4]},
+//   {source: nodes[3], target: nodes[5]},
+//   {source: nodes[4], target: nodes[5]},
+//   {source: nodes[5], target: nodes[0]},
+//   {source: nodes[6], target: nodes[1]},
+//   {source: nodes[7], target: nodes[1]},
+//   {source: nodes[8], target: nodes[1]},
+//   {source: nodes[9], target: nodes[1]},
+//   {source: nodes[10], target: nodes[1]},
+//   {source: nodes[2], target: nodes[1]}
+// ];
 
 var svg = d3.select("body").append("svg")
     .attr("width", width)
@@ -80,23 +99,26 @@ svg.selectAll(".axis")
     .attr("x1", radius.range()[0])
     .attr("x2", radius.range()[1]);
 
-svg.selectAll(".link")
-    .data(links)
-  .enter().append("path")
-    .attr("class", "link")
-    .attr("d", d3.hive.link()
-    .angle(function(d) { console.log("Hey there", d.x, "and then...", anglescale(d.x)); return (angle(d.x)); })   // angle(d.x)
-   .radius(function(d) { return radius(d.y); }))
-    .style("stroke", function(d) { return color(d.source.x); })
+// svg.selectAll(".link")
+//     .data(links)
+//   .enter().append("path")
+//     .attr("class", "link")
+//     .attr("d", d3.hive.link()
+//     .angle(function(d) { console.log("Hey there", d.x, "and then...", anglescale(d.x)); return (angle(d.x)); })   // angle(d.x)
+//    .radius(function(d) { return radius(d.y); }))
+//     .style("stroke", function(d) { return color(d.source.x); })
 
-svg.selectAll(".node")
+d3.csv("cleanBike.csv", function(data){
+  nodes=data;
+  svg.selectAll(".node")
     .data(nodes)
   .enter().append("circle")
     .attr("class", "node")
-    .attr("transform", function(d) { return "rotate(" + degrees(angle(d.x)) + ")"; })
-    .attr("cx", function(d) { return radius(d.y); })
+    .attr("transform", function(d) {  console.log("calling map"+d), return "rotate(" + degrees(angle(map_stations_axes(d.startstationid))) + ")"; })
+    .attr("cx", function(d) { return radius(d.startstationid); })
     .attr("r", 5)
-    .style("fill", function(d) { return color(d.x); })
+    .style("fill", function(d) { return color(d.startstationid); })
+});
 
 function degrees(radians) {
   return radians / Math.PI * 180 - 90;
