--- a/visual.html
+++ b/visual.html
@@ -23,28 +23,26 @@ var width = 960,
     innerRadius = 40,
     outerRadius = 240;
 
-var angle = d3.scale.ordinal().domain(d3.range(14)).rangePoints([0, 2 * Math.PI]),
-    radius = d3.scale.linear().domain([14529,21689]).range([innerRadius, outerRadius]),
-    color = d3.scale.category10().domain(d3.range(20));
+var angle = d3.scale.ordinal().domain(d3.range(13)).rangePoints([0, 2 * Math.PI]),
+    radius = d3.scale.linear().domain([14520,21691]).range([innerRadius, outerRadius]),
+    color = d3.scale.category10().domain(d3.range(13));
 
  var stations_axes={
- 151:1,
- 285:2,
- 293:3,
- 327:4,
- 358:5,
- 382:6,
- 402:7,
- 426:8,
- 435:9,
- 497:10,
- 499:11,
- 519:12,
- 521:13
+ 151:0,
+ 285:1,
+ 293:2,
+ 327:3,
+ 358:4,
+ 382:5,
+ 402:6,
+ 426:7,
+ 435:8,
+ 497:9,
+ 499:10,
+ 519:11,
+ 521:12
 }
  ;
-function map_stations_axes(station){
-  return stations_axes[station];}
 
 var nodes;
 //   {x: 0, y: .1},
@@ -68,15 +66,15 @@ var svg = d3.select("body").append("svg")
   .append("g")
     .attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
-var axisscale = d3.scale.linear()
-    .domain([0,14])
-    .range([0,360]);
-var anglescale = d3.scale.linear()
-    .domain([0,13])
-    .range([0,2*Math.PI]);
+// var axisscale = d3.scale.linear()
+//     .domain([0,14])
+//     .range([0,360]);
+// var anglescale = d3.scale.linear()
+//     .domain([0,13])
+//     .range([0,2*Math.PI]);
 
 svg.selectAll(".axis")
-    .data(d3.range(14))
+    .data(d3.range(13))
   .enter().append("line")
     .attr("class", "axis")
     .attr("transform", function(d) { return "rotate(" + degrees(angle(d)) + ")"; })
@@ -92,35 +90,31 @@ svg.selectAll(".axis")
 //    .radius(function(d) { return radius(d.y); }))
 //     .style("stroke", function(d) { return color(d.source.x); })
 
-d3.csv("cleanbike_short.csv", function(data){
+d3.csv("cleanBike.csv", function(data){
   nodes=data;
+  for (index in data){
+    links.push({source:{startstationid: data[index].startstationid, bikeid:data[index].bikeid}, target:{startstationid:data[index].endstationid, bikeid:data[index].bikeid}});
+  };
   svg.selectAll(".node")
     .data(nodes)
   .enter().append("circle")
     .attr("class", "node")
-    .attr("transform", function(d) {  return "rotate(" + degrees(angle(map_stations_axes(d.startstationid))) + ")"; })
+    .attr("transform", function(d) {  return "rotate(" + degrees(angle(stations_axes[d.startstationid])) + ")"; })
     .attr("cx", function(d) { return radius(d.bikeid); })
     .attr("r", 5)
     .style("fill", function(d) { return color(d.bikeid); })
-
-});
-d3.csv("cleanbike_short.csv", function(data){
-  console.log(data);
-  for (index in data){
-    links.push({source:data[index].startstationid, target:data[index].endstationid});
-  };
- console.log(links) 
 
     svg.selectAll(".link")
     .data(links)
     .enter().append("path")
     .attr("class", "link")
     .attr("d", d3.hive.link()
-    .angle(function(d) {console.log(stations_axes[d]); return (angle(map_stations_axes[d])); })   // angle(d.x)
+    .angle(function(d) {console.log(angle(stations_axes[d.startstationid])); return (angle(stations_axes[d.startstationid])); })   // angle(d.x)
    .radius(function(d) { return radius(d.bikeid); }))
-    .style("stroke", function(d) { return color(d.source.x); })
+    .style("stroke", function(d) { return color(d.source.bikeid); })
 
 });
+
 function degrees(radians) {
   return radians / Math.PI * 180 - 90;
 }
